minor visual tweaks

--- a/findrecords.html
+++ b/findrecords.html
@@ -37,9 +37,9 @@
           <li class="col-md-6 col-sm-6"><a href="#physician" data-toggle="tab" class="box-link-rapper">
               <h3 class="fg-white">Physician or Hospital</h3><i class="icon-user-md"></i></a></li>
           <li class="col-md-6 col-sm-6"><a href="#pharmacy" data-toggle="tab" class="box-link-rapper">
-              <h3 class="fg-white">Pharmacy or Lab</h3><i class="icon-plus-sign-alt"></i></a></li>
+              <h3 class="fg-white">Pharmacy or Lab</h3><i class="icon-medkit"></i></a></li>
           <li class="col-md-6 col-sm-6"><a href="#immunization" data-toggle="tab" class="box-link-rapper">
-              <h3 class="fg-white">Immunization Registry</h3><i class="icon-medkit"></i></a></li>
+              <h3 class="fg-white">Immunization Registry</h3><i class="icon-file-text-alt"></i></a></li>
         </ul>
       </div>
       <div class="tab-content">
@@ -49,6 +49,16 @@
           </div>
           <div class="col-md-8 providers">
             <ul class="nav nav-pills nav-stacked col-md-4 provider-list">
+              <li><a href="#insurance-aetna" data-toggle="tab">Aetna</a></li>
+              <li><a href="#insurance-kaiser-permanente" data-toggle="tab">Kaiser Permanente</a></li>
+              <li><a href="#insurance-unitedhealth-group" data-toggle="tab">UnitedHealth Group</a></li>
+              <li><a href="#insurance-veterans-affairs" data-toggle="tab">Veterans Affairs</a></li>
+              <li><a href="#insurance-wellpoint" data-toggle="tab">Wellpoint</a></li>
+              <li><a href="#insurance-aetna" data-toggle="tab">Aetna</a></li>
+              <li><a href="#insurance-kaiser-permanente" data-toggle="tab">Kaiser Permanente</a></li>
+              <li><a href="#insurance-unitedhealth-group" data-toggle="tab">UnitedHealth Group</a></li>
+              <li><a href="#insurance-veterans-affairs" data-toggle="tab">Veterans Affairs</a></li>
+              <li><a href="#insurance-wellpoint" data-toggle="tab">Wellpoint</a></li>
               <li><a href="#insurance-aetna" data-toggle="tab">Aetna</a></li>
               <li><a href="#insurance-kaiser-permanente" data-toggle="tab">Kaiser Permanente</a></li>
               <li><a href="#insurance-unitedhealth-group" data-toggle="tab">UnitedHealth Group</a></li>
@@ -87,6 +97,16 @@
               <li><a href="#insurance-unitedhealth-group" data-toggle="tab">UnitedHealth Group</a></li>
               <li><a href="#insurance-veterans-affairs" data-toggle="tab">Veterans Affairs</a></li>
               <li><a href="#insurance-wellpoint" data-toggle="tab">Wellpoint</a></li>
+              <li><a href="#insurance-aetna" data-toggle="tab">Aetna</a></li>
+              <li><a href="#insurance-kaiser-permanente" data-toggle="tab">Kaiser Permanente</a></li>
+              <li><a href="#insurance-unitedhealth-group" data-toggle="tab">UnitedHealth Group</a></li>
+              <li><a href="#insurance-veterans-affairs" data-toggle="tab">Veterans Affairs</a></li>
+              <li><a href="#insurance-wellpoint" data-toggle="tab">Wellpoint</a></li>
+              <li><a href="#insurance-aetna" data-toggle="tab">Aetna</a></li>
+              <li><a href="#insurance-kaiser-permanente" data-toggle="tab">Kaiser Permanente</a></li>
+              <li><a href="#insurance-unitedhealth-group" data-toggle="tab">UnitedHealth Group</a></li>
+              <li><a href="#insurance-veterans-affairs" data-toggle="tab">Veterans Affairs</a></li>
+              <li><a href="#insurance-wellpoint" data-toggle="tab">Wellpoint</a></li>
             </ul>
             <div class="tab-content col-md-8">
               <div class="tab-pane no-data active">
@@ -120,6 +140,16 @@
               <li><a href="#insurance-unitedhealth-group" data-toggle="tab">UnitedHealth Group</a></li>
               <li><a href="#insurance-veterans-affairs" data-toggle="tab">Veterans Affairs</a></li>
               <li><a href="#insurance-wellpoint" data-toggle="tab">Wellpoint</a></li>
+              <li><a href="#insurance-aetna" data-toggle="tab">Aetna</a></li>
+              <li><a href="#insurance-kaiser-permanente" data-toggle="tab">Kaiser Permanente</a></li>
+              <li><a href="#insurance-unitedhealth-group" data-toggle="tab">UnitedHealth Group</a></li>
+              <li><a href="#insurance-veterans-affairs" data-toggle="tab">Veterans Affairs</a></li>
+              <li><a href="#insurance-wellpoint" data-toggle="tab">Wellpoint</a></li>
+              <li><a href="#insurance-aetna" data-toggle="tab">Aetna</a></li>
+              <li><a href="#insurance-kaiser-permanente" data-toggle="tab">Kaiser Permanente</a></li>
+              <li><a href="#insurance-unitedhealth-group" data-toggle="tab">UnitedHealth Group</a></li>
+              <li><a href="#insurance-veterans-affairs" data-toggle="tab">Veterans Affairs</a></li>
+              <li><a href="#insurance-wellpoint" data-toggle="tab">Wellpoint</a></li>
             </ul>
             <div class="tab-content col-md-8">
               <div class="tab-pane no-data active">
@@ -148,6 +178,16 @@
           </div>
           <div class="col-md-8 providers">
             <ul class="nav nav-pills nav-stacked col-md-4 provider-list">
+              <li><a href="#insurance-aetna" data-toggle="tab">Aetna</a></li>
+              <li><a href="#insurance-kaiser-permanente" data-toggle="tab">Kaiser Permanente</a></li>
+              <li><a href="#insurance-unitedhealth-group" data-toggle="tab">UnitedHealth Group</a></li>
+              <li><a href="#insurance-veterans-affairs" data-toggle="tab">Veterans Affairs</a></li>
+              <li><a href="#insurance-wellpoint" data-toggle="tab">Wellpoint</a></li>
+              <li><a href="#insurance-aetna" data-toggle="tab">Aetna</a></li>
+              <li><a href="#insurance-kaiser-permanente" data-toggle="tab">Kaiser Permanente</a></li>
+              <li><a href="#insurance-unitedhealth-group" data-toggle="tab">UnitedHealth Group</a></li>
+              <li><a href="#insurance-veterans-affairs" data-toggle="tab">Veterans Affairs</a></li>
+              <li><a href="#insurance-wellpoint" data-toggle="tab">Wellpoint</a></li>
               <li><a href="#insurance-aetna" data-toggle="tab">Aetna</a></li>
               <li><a href="#insurance-kaiser-permanente" data-toggle="tab">Kaiser Permanente</a></li>
               <li><a href="#insurance-unitedhealth-group" data-toggle="tab">UnitedHealth Group</a></li>
