--- a/findrecords.html
+++ b/findrecords.html
@@ -5,21 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/bbhub.css">
-    <script src="js/respond.js"></script>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jade-runtime.js"></script>
-    <script src="js/jade-templates.js"></script>
-    <script src="js/jquery.cookie.js"></script>
-    <script src="js/bbhub.js"></script>
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="stylesheet" href="css/bbhub-combined.css">
+    <!--[if IE 7]>
+    <link rel="stylesheet" href="css/font-awesome-ie7.min.css">
+    <![endif]-->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js">\x3C/script>')</script>
+    <script src="js/bbhub-combined.min.js"></script>
   </head>
   <body>
     <nav class="main-nav navbar navbar-default">
       <div class="container">
-        <div class="navbar-header"><a href="/" class="navbar-brand logo bb-logotype"><img src="img/bb-logo-vector.png" class="little-logo">Blue Button</a></div>
+        <div class="navbar-header"><a href="index.html" class="navbar-brand logo bb-logotype"><img src="img/bb-logo-vector.png" class="little-logo">Blue Button</a></div>
         <ul class="top-nav nav navbar-nav pull-right hidden-xs">
           <li><a href="findrecords.html">Get my records</a></li>
           <li><a href="userecords.html">Use my records</a></li>
@@ -35,16 +33,16 @@
              One in three Americans has data available in their health insurance.
           </h6>
         </div>
-        <div class="col-md-9 col-sm-9">
+        <div class="col-sm-9">
           <ul class="row data-sources list-unstyled text-center">
-            <li class="col-md-6 col-sm-6"><a href="#insurance" data-toggle="tab" class="box-link-rapper">
+            <li class="col-sm-6"><a href="#insurance" data-toggle="tab" class="box-link-rapper">
                 <h3 class="fg-white">Health Insurance</h3><i class="insurance-icon icon-umbrella"></i>
                 <h6 class="start-here fg-white">start here</h6></a></li>
-            <li class="col-md-6 col-sm-6"><a href="#physician" data-toggle="tab" class="box-link-rapper">
+            <li class="col-sm-6"><a href="#physician" data-toggle="tab" class="box-link-rapper">
                 <h3 class="fg-white">Physician or Hospital</h3><i class="icon-user-md"></i></a></li>
-            <li class="col-md-6 col-sm-6"><a href="#pharmacy" data-toggle="tab" class="box-link-rapper">
+            <li class="col-sm-6"><a href="#pharmacy" data-toggle="tab" class="box-link-rapper">
                 <h3 class="fg-white">Pharmacy or Lab</h3><i class="icon-medkit"></i></a></li>
-            <li class="col-md-6 col-sm-6"><a href="#immunization" data-toggle="tab" class="box-link-rapper">
+            <li class="col-sm-6"><a href="#immunization" data-toggle="tab" class="box-link-rapper">
                 <h3 class="fg-white">Immunization Registry</h3><i class="icon-file-text-alt"></i></a></li>
           </ul>
         </div>
@@ -91,10 +89,12 @@
           <li><a href="https://www.facebook.com/bluebuttonhealth" class="share-icon"><i class="icon-facebook"></i></a></li>
           <li><a href="https://twitter.com/ProjectBlueBtn" class="share-icon"><i class="icon-twitter"></i></a></li>
         </ul>
-        <p class="bb-logotype inline"><img src="img/bb-logo-vector.png" class="little-logo">Blue Button</p>
+        <p class="bb-logotype inline"><img src="img/bb-logo-vector.png" class="little-logo">
+        </p>
         <ul class="list-inline inline">
           <li><a href="#">About</a></li>
-          <li><a href="#">Partners</a></li>
+          <li>|</li>
+          <li><a href="supporters.html">Supporters</a></li>
         </ul>
       </div>
     </div>
