--- a/index.html
+++ b/index.html
@@ -5,16 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/bbhub.css">
-    <script src="js/respond.js"></script>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jade-runtime.js"></script>
-    <script src="js/jade-templates.js"></script>
-    <script src="js/jquery.cookie.js"></script>
-    <script src="js/bbhub.js"></script>
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="stylesheet" href="css/bbhub-combined.css">
+    <!--[if IE 7]>
+    <link rel="stylesheet" href="css/font-awesome-ie7.min.css">
+    <![endif]-->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js">\x3C/script>')</script>
+    <script src="js/bbhub-combined.min.js"></script>
   </head>
   <body>
     <div class="alert alert-warning alert-slim"><strong>Note:&nbsp;</strong>This website is work in progress.&nbsp;<a href="#wip-modal" data-toggle="modal" class="alert-link">Read more...</a></div>
@@ -23,7 +21,8 @@
         <li><a href="findrecords.html">Get my records</a></li>
         <li><a href="userecords.html">Use my records</a></li>
       </ul>
-      <h6 class="onc-tagline fg-white"><img src="img/bb-onc.png" class="bb-onc-logo">The Office of the National Coordinator for Health Information Technology</h6>
+      <h6 class="onc-tagline fg-white"><img src="img/bb-onc.png" class="bb-onc-logo">
+      </h6>
     </div>
     <div id="wip-modal" class="modal fade">
       <div class="modal-dialog">
@@ -41,11 +40,29 @@
         </div>
       </div>
     </div>
+    <div id="vid-modal" class="modal fade">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" data-dismiss="modal" tabindex="-1" role="dialog" aria-hidden="true" class="close">&times;</button>
+            <h4 class="modal-title"></h4>
+          </div>
+          <div class="modal-body text-center">
+            <div class="flex-video widescreen">
+              <iframe id="vid-frame" src="" frameborder="0" allowfullscreen></iframe>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" data-dismiss="modal" class="btn">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="section splash-section">
+      <div class="splash-img-wrapper"></div>
       <div class="splash-title text-center">
-        <div class="splash-logo-container"><img src="img/bb-logo-vector.png" class="splash-logo"></div>
-        <h1>Empowering you with your health records</h1><a href="findrecords.html" class="btn btn-lg btn-primary">Get Started</a>
-      </div><a href="#why-bb" class="next-btn text-center fg-white">next<br><i class="icon-chevron-down"></i></a>
+        <h1 class="h2">Introducing Blue Button:<br>Online access to your health records</h1><a href="findrecords.html" class="btn btn-lg btn-primary">Get Started</a>
+      </div><a href="#why-bb" class="next-btn text-center fg-dblue">next<br><i class="icon-chevron-down"></i></a>
     </div>
     <div class="section why-bb">
       <div id="why-bb" class="container text-center">
@@ -88,7 +105,7 @@
         <h2 class="h1">Stay in control of your health</h2>
         <h2 class="fg-maqua fw-normal">&hellip;in three easy steps:</h2>
         <div class="row">
-          <div class="col-md-4 col-sm-4 circ-col start-find">
+          <div class="col-sm-4 circ-col start-find">
             <div class="wrap-outer-icon">
               <div class="wrap-icon text-center">
                 <h4 class="step-num fg-white">1</h4>
@@ -97,7 +114,7 @@
             <h3 class="fg-daqua">Find It</h3>
             <h5 class="fg-dgrey fw-normal">See if your physician, hospital, pharmacy, lab, or health insurance offers Blue Button.</h5>
           </div>
-          <div class="col-md-4 col-sm-4 circ-col start-download">
+          <div class="col-sm-4 circ-col start-download">
             <div class="wrap-outer-icon">
               <div class="wrap-icon text-center">
                 <h4 class="step-num fg-white">2</h4>
@@ -106,7 +123,7 @@
             <h3 class="fg-dblue">Get It</h3>
             <h5 class="fg-dgrey fw-normal">Start compiling your health data from your various health care providers.</h5>
           </div>
-          <div class="col-md-4 col-sm-4 circ-col start-use">
+          <div class="col-sm-4 circ-col start-use">
             <div class="wrap-outer-icon">
               <div class="wrap-icon text-center">
                 <h4 class="step-num fg-white">3</h4>
@@ -122,29 +139,56 @@
     <div class="section testimonials">
       <div id="testimonials" class="container text-center">
         <h2 class="h1 fg-white">Blue Button helped us.</h2>
-        <h2 class="fg-white fw-normal">Read and watch how Blue Button helped these individuals.</h2>
+        <h2 class="fg-white fw-normal">Read and watch how Blue Button can help you.</h2>
+        <div class="row centered-row"><a href="http://www.youtube.com/watch?v=lGGnda44Yik" data-ytid="lGGnda44Yik" target="_blank" class="vid-still">
+            <div class="col-sm-6 img-container"><img src="img/va-bb.jpg">
+              <div class="caption-wrapper">
+                <h6 class="caption">Use the VA Blue Button <br>to Access Your Personal Health Information</h6>
+              </div>
+            </div></a><a href="http://www.youtube.com/watch?v=UMiPW831b1o" data-ytid="UMiPW831b1o" target="_blank" class="vid-still">
+            <div class="col-sm-5 img-container"><img src="img/health-it-for-you.jpg">
+              <div class="caption-wrapper">
+                <h6 class="caption">Health IT For You <br>Giving You Access to Your Medical Records</h6>
+              </div>
+            </div></a></div>
+        <div class="row centered-row"><a href="http://www.youtube.com/watch?v=JY1l5s8ED5c" data-ytid="JY1l5s8ED5c" target="_blank" class="vid-still">
+            <div class="col-sm-4 img-container"><img src="img/right-to-access.jpg">
+              <div class="caption-wrapper">
+                <h6 class="caption">The Right to Access and Correct Your Health Information</h6>
+              </div>
+            </div></a><a href="blue-button-beth-schindele.pdf" target="_blank">
+            <div class="col-sm-3 img-container"><img src="img/beth-schindele.jpg">
+              <div class="caption-wrapper">
+                <h6 class="caption fg-dgrey">Beth Schindele, caregiver and advocate for her father</h6>
+              </div>
+            </div></a><a href="http://www.youtube.com/watch?v=mX-QL9PoePU" data-ytid="mX-QL9PoePU" target="_blank" class="vid-still">
+            <div class="col-sm-4 img-container"><img src="img/hipaa-omnibus.jpg">
+              <div class="caption-wrapper">
+                <h6 class="caption">The HIPAA Omnibus Rule</h6>
+              </div>
+            </div></a></div>
         <div class="row centered-row">
-          <div class="col-md-3 col-sm-3 img-container"><img src="img/testimonial-placeholder-1.png">
-          </div>
-          <div class="col-md-3 col-sm-3 img-container"><img src="img/testimonial-placeholder-2.png">
-          </div>
-          <div class="col-md-5 col-sm-5 img-container"><img src="img/testimonial-placeholder-3.png">
-          </div>
-        </div>
-        <div class="row centered-row">
-          <div class="col-md-5 col-sm-5 img-container"><img src="img/testimonial-placeholder-4.png">
-          </div>
-          <div class="col-md-3 col-sm-3 img-container"><img src="img/testimonial-placeholder-5.png">
-          </div>
-          <div class="col-md-3 col-sm-3 img-container"><img src="img/testimonial-placeholder-6.png">
-          </div>
-        </div>
-        <div class="row centered-row">
-          <div class="col-md-11 col-sm-11 share-blurb">
+          <div class="col-sm-11 share-blurb">
             <p class="pull-right text-right fg-white">Share your story on how Blue Button has helped you &rarr;<a class="share-btn btn btn-warning btn-lg">SHARE</a></p>
           </div>
         </div>
       </div><a href="#header" class="next-btn text-center fg-white"><i class="icon-chevron-up"><br></i>top</a>
+    </div>
+    <div class="section footer">
+      <div class="container">
+        <ul class="pull-right list-inline">
+          <li><a href="#" class="share-icon"><i class="icon-envelope"></i></a></li>
+          <li><a href="https://www.facebook.com/bluebuttonhealth" class="share-icon"><i class="icon-facebook"></i></a></li>
+          <li><a href="https://twitter.com/ProjectBlueBtn" class="share-icon"><i class="icon-twitter"></i></a></li>
+        </ul>
+        <p class="bb-logotype inline"><img src="img/bb-logo-vector.png" class="little-logo">
+        </p>
+        <ul class="list-inline inline">
+          <li><a href="#">About</a></li>
+          <li>|</li>
+          <li><a href="supporters.html">Supporters</a></li>
+        </ul>
+      </div>
     </div>
     <script>
       $(function() {
@@ -156,19 +200,5 @@
       
       
     </script>
-    <div class="section footer">
-      <div class="container">
-        <ul class="pull-right list-inline">
-          <li><a href="#" class="share-icon"><i class="icon-envelope"></i></a></li>
-          <li><a href="https://www.facebook.com/bluebuttonhealth" class="share-icon"><i class="icon-facebook"></i></a></li>
-          <li><a href="https://twitter.com/ProjectBlueBtn" class="share-icon"><i class="icon-twitter"></i></a></li>
-        </ul>
-        <p class="bb-logotype inline"><img src="img/bb-logo-vector.png" class="little-logo">Blue Button</p>
-        <ul class="list-inline inline">
-          <li><a href="#">About</a></li>
-          <li><a href="#">Partners</a></li>
-        </ul>
-      </div>
-    </div>
   </body>
 </html>
