--- a/styleguide.html
+++ b/styleguide.html
@@ -5,16 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/bbhub.css">
-    <script src="js/respond.js"></script>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jade-runtime.js"></script>
-    <script src="js/jade-templates.js"></script>
-    <script src="js/jquery.cookie.js"></script>
-    <script src="js/bbhub.js"></script>
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="stylesheet" href="css/bbhub-combined.css">
+    <!--[if IE 7]>
+    <link rel="stylesheet" href="css/font-awesome-ie7.min.css">
+    <![endif]-->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js">\x3C/script>')</script>
+    <script src="js/bbhub-combined.min.js"></script>
   </head>
   <link rel="stylesheet" href="css/styleguide.css">
   <body>
@@ -73,10 +71,12 @@
           <li><a href="https://www.facebook.com/bluebuttonhealth" class="share-icon"><i class="icon-facebook"></i></a></li>
           <li><a href="https://twitter.com/ProjectBlueBtn" class="share-icon"><i class="icon-twitter"></i></a></li>
         </ul>
-        <p class="bb-logotype inline"><img src="img/bb-logo-vector.png" class="little-logo">Blue Button</p>
+        <p class="bb-logotype inline"><img src="img/bb-logo-vector.png" class="little-logo">
+        </p>
         <ul class="list-inline inline">
           <li><a href="#">About</a></li>
-          <li><a href="#">Partners</a></li>
+          <li>|</li>
+          <li><a href="supporters.html">Supporters</a></li>
         </ul>
       </div>
     </div>
