--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       <div class="splash-img-wrapper"></div>
       <div class="splash-title text-center">
         <h1 class="h2">Introducing Blue Button:<br>Online access to your health records</h1><a href="findrecords.html" class="btn btn-lg btn-primary">Get Started</a>
+        <h6 class="h6 alt-use visible-xs">or&nbsp;<a href="userecords.html" class="show-xs">use my records</a></h6>
       </div><a href="#why-bb" class="next-btn text-center fg-dblue hidden-xs">next<br><i class="icon-chevron-down"></i></a>
     </div>
     <div class="section why-bb">
@@ -159,16 +160,13 @@
     </div>
     <div class="section footer">
       <div class="container">
-        <ul class="pull-right list-inline">
-          <li><a href="#" class="share-icon"><i class="icon-envelope"></i></a></li>
-          <li><a href="https://www.facebook.com/bluebuttonhealth" class="share-icon"><i class="icon-facebook"></i></a></li>
-          <li><a href="https://twitter.com/ProjectBlueBtn" class="share-icon"><i class="icon-twitter"></i></a></li>
-        </ul>
         <ul class="list-inline inline">
           <li class="hidden-xs force-inline"><img src="img/bb-logo-vector.png" class="little-logo"></li>
           <li><a href="#">About</a></li>
           <li>|</li>
           <li><a href="supporters.html">Supporters</a></li>
+          <li>|</li>
+          <li><a href="privacy.html">Privacy</a></li>
         </ul>
       </div>
     </div>
