updates for Nov. 15

--- a/userecords.html
+++ b/userecords.html
@@ -7,9 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="css/bbhub-combined.css">
-    <!--[if IE 7]>
-    <link rel="stylesheet" href="css/font-awesome-ie7.min.css">
-    <![endif]-->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js">\x3C/script>')</script>
     <script src="js/bbhub-combined.min.js"></script>
@@ -31,18 +28,42 @@
         you reach your health goals and receive recommendations to keep you at your best.
       </h4>
       <ul class="row list-unstyled text-center">
-        <li class="col-sm-4 app-rapper"><a href="http://healthvault.com" class="text-center"><img src="img/apps/healthvault.png" class="app-icon">
-            <h5 class="fg-maqua">Microsoft HealthVault</h5></a></li>
-        <li class="col-sm-4 app-rapper"><a href="http://www.ibluebutton.com/get-apps/" class="text-center"><img src="img/apps/ibluebutton.png" class="app-icon">
-            <h5 class="fg-maqua">Humetrix iBlueButton</h5></a></li>
-        <li class="col-sm-4 app-rapper"><a href="https://www.followmyhealth.com/" class="text-center"><img src="img/apps/followmyhealth.png" class="app-icon">
-            <h5 class="fg-maqua">FollowMyHealth</h5></a></li>
-        <li class="col-sm-4 app-rapper"><a href="http://mygazelleapp.com/" class="text-center"><img src="img/apps/gazelle.png" class="app-icon">
-            <h5 class="fg-maqua">Quest Gazelle</h5></a></li>
-        <li class="col-sm-4 app-rapper"><a href="http://www.nomoreclipboard.com/" class="text-center"><img src="img/apps/nomoreclipboard.png" class="app-icon">
-            <h5 class="fg-maqua">NoMoreClipboard</h5></a></li>
-        <li class="col-sm-4 app-rapper"><a href="http://geniemd.com/" class="text-center"><img src="img/apps/geaniemd.jpg" class="app-icon">
-            <h5 class="fg-maqua">Geanie MD</h5></a></li>
+        <li class="col-sm-4 app-rapper"><a href="http://healthvault.com" class="text-center"><img src="img/apps/healthvault.png" class="app-icon"></a>
+          <h5 class="fg-maqua">Microsoft HealthVault</h5>
+          <div class="app-description">
+            <h6>This is a short descrption of the app</h6>
+          </div>
+        </li>
+        <li class="col-sm-4 app-rapper"><a href="http://www.ibluebutton.com/get-apps/" class="text-center"><img src="img/apps/ibluebutton.png" class="app-icon"></a>
+          <h5 class="fg-maqua">Humetrix iBlueButton</h5>
+          <div class="app-description">
+            <h6>This is a short descrption of the app</h6>
+          </div>
+        </li>
+        <li class="col-sm-4 app-rapper"><a href="https://www.followmyhealth.com/" class="text-center"><img src="img/apps/followmyhealth.png" class="app-icon"></a>
+          <h5 class="fg-maqua">FollowMyHealth</h5>
+          <div class="app-description">
+            <h6>This is a short descrption of the app</h6>
+          </div>
+        </li>
+        <li class="col-sm-4 app-rapper"><a href="http://mygazelleapp.com/" class="text-center"><img src="img/apps/gazelle.png" class="app-icon"></a>
+          <h5 class="fg-maqua">Quest Gazelle</h5>
+          <div class="app-description">
+            <h6>This is a short descrption of the app</h6>
+          </div>
+        </li>
+        <li class="col-sm-4 app-rapper"><a href="http://www.nomoreclipboard.com/" class="text-center"><img src="img/apps/nomoreclipboard.png" class="app-icon"></a>
+          <h5 class="fg-maqua">NoMoreClipboard</h5>
+          <div class="app-description">
+            <h6>This is a short descrption of the app</h6>
+          </div>
+        </li>
+        <li class="col-sm-4 app-rapper"><a href="http://geniemd.com/" class="text-center"><img src="img/apps/geaniemd.jpg" class="app-icon"></a>
+          <h5 class="fg-maqua">Geanie MD</h5>
+          <div class="app-description">
+            <h6>This is a short descrption of the app</h6>
+          </div>
+        </li>
       </ul>
       <div class="text-center">
         <ul class="pagination pagination-lg">
