--- a/userecords-2.html
+++ b/userecords-2.html
@@ -7,9 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="css/bbhub-combined.css">
-    <!--[if IE 7]>
-    <link rel="stylesheet" href="css/font-awesome-ie7.min.css">
-    <![endif]-->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js">\x3C/script>')</script>
     <script src="js/bbhub-combined.min.js"></script>
@@ -31,25 +28,35 @@
         you reach your health goals and receive recommendations to keep you at your best.
       </h4>
       <ul class="row list-unstyled text-center">
-        <li class="col-sm-4 app-rapper"><a href="http://go.hint.com" class="text-center"><i class="app-coming-soon icon-question-sign fg-lgrey"></i></a>
+        <li class="col-sm-4 app-rapper"><a href="http://go.hint.com" class="text-center"><img src="img/apps/hinthealth.png" class="app-icon"></a>
           <h5 class="fg-maqua">Hint Health</h5>
-          <h6 class="app-description">coming soon</h6>
+          <div class="app-description">
+            <h6>This is a short descrption of the app</h6>
+          </div>
         </li>
-        <li class="col-sm-4 app-rapper"><a href="http://www.humetrix.com/icebb.html" class="text-center"><i class="app-coming-soon icon-question-sign fg-lgrey"></i></a>
+        <li class="col-sm-4 app-rapper"><a href="http://www.humetrix.com/icebb.html" class="text-center"><img src="img/apps/icebluebutton.png" class="app-icon"></a>
           <h5 class="fg-maqua">Ice Blue Button</h5>
-          <h6 class="app-description">coming soon</h6>
+          <div class="app-description">
+            <h6>This is a short descrption of the app</h6>
+          </div>
         </li>
-        <li class="col-sm-4 app-rapper"><a href="http://lyfechannel.com/" class="text-center"><i class="app-coming-soon icon-question-sign fg-lgrey"></i></a>
+        <li class="col-sm-4 app-rapper"><a href="http://lyfechannel.com/" class="text-center"><img src="img/apps/lyfechannel.png" class="app-icon"></a>
           <h5 class="fg-maqua">LyfeChannel</h5>
-          <h6 class="app-description">coming soon</h6>
+          <div class="app-description">
+            <h6>This is a short descrption of the app</h6>
+          </div>
         </li>
-        <li class="col-sm-4 app-rapper"><a href="http://www.getbetter.com/" class="text-center"><i class="app-coming-soon icon-question-sign fg-lgrey"></i></a>
+        <li class="col-sm-4 app-rapper"><a href="http://www.getbetter.com/" class="text-center"><img src="img/apps/getbetter.png" class="app-icon"></a>
           <h5 class="fg-maqua">Better</h5>
-          <h6 class="app-description">coming soon</h6>
+          <div class="app-description">
+            <h6>This is a short descrption of the app</h6>
+          </div>
         </li>
-        <li class="col-sm-4 app-rapper"><a href="http://stayinyourprime.com/" class="text-center"><i class="app-coming-soon icon-question-sign fg-lgrey"></i></a>
+        <li class="col-sm-4 app-rapper"><a href="http://stayinyourprime.com/" class="text-center"><img src="img/apps/prime.png" class="app-icon"></a>
           <h5 class="fg-maqua">Prime</h5>
-          <h6 class="app-description">coming soon</h6>
+          <div class="app-description">
+            <h6>This is a short descrption of the app</h6>
+          </div>
         </li>
       </ul>
       <div class="text-center">
