--- a/userecords-1.html
+++ b/userecords-1.html
@@ -17,7 +17,7 @@
         <div class="navbar-header"><a href="index.html" class="navbar-brand logo bb-logotype"><img src="img/bb-logo-vector.png" class="little-logo">Blue Button</a></div>
         <ul class="top-nav nav navbar-nav pull-right hidden-xs">
           <li><a href="findrecords.html">Get my records</a></li>
-          <li><a href="userecords.html">Use my records</a></li>
+          <li><a href="userecords-1.html">Use my records</a></li>
         </ul>
       </div>
     </nav>
@@ -27,15 +27,15 @@
         Take your records with you. Plug them into apps and other services that help
         you reach your health goals and receive recommendations to keep you at your best.
       </h4>
-      <ul class="row list-unstyled text-center">
-        <li class="col-sm-4 app-rapper"><a href="http://healthvault.com" class="text-center"><img src="img/apps/healthvault.png" class="app-icon"></a>
-          <h5 class="fg-maqua">Microsoft HealthVault</h5>
+      <ul id="receiver-list" class="row list-unstyled text-center">
+        <li class="col-sm-4 app-rapper"><a href="http://www.getbetter.com/" class="text-center"><img src="img/apps/getbetter.png" class="app-icon"></a>
+          <h5 class="fg-maqua">Better</h5>
           <div class="app-description">
             <h6>This is a short descrption of the app</h6>
           </div>
         </li>
-        <li class="col-sm-4 app-rapper"><a href="http://www.ibluebutton.com/get-apps/" class="text-center"><img src="img/apps/ibluebutton.png" class="app-icon"></a>
-          <h5 class="fg-maqua">Humetrix iBlueButton</h5>
+        <li class="col-sm-4 app-rapper"><a href="go.hint.com" class="text-center"><img src="img/apps/hinthealth.png" class="app-icon"></a>
+          <h5 class="fg-maqua">care tracker</h5>
           <div class="app-description">
             <h6>This is a short descrption of the app</h6>
           </div>
@@ -47,19 +47,19 @@
           </div>
         </li>
         <li class="col-sm-4 app-rapper"><a href="http://mygazelleapp.com/" class="text-center"><img src="img/apps/gazelle.png" class="app-icon"></a>
-          <h5 class="fg-maqua">Quest Gazelle</h5>
-          <div class="app-description">
-            <h6>This is a short descrption of the app</h6>
-          </div>
-        </li>
-        <li class="col-sm-4 app-rapper"><a href="http://www.nomoreclipboard.com/" class="text-center"><img src="img/apps/nomoreclipboard.png" class="app-icon"></a>
-          <h5 class="fg-maqua">NoMoreClipboard</h5>
+          <h5 class="fg-maqua">Gazelle</h5>
           <div class="app-description">
             <h6>This is a short descrption of the app</h6>
           </div>
         </li>
         <li class="col-sm-4 app-rapper"><a href="http://geniemd.com/" class="text-center"><img src="img/apps/geaniemd.jpg" class="app-icon"></a>
-          <h5 class="fg-maqua">Geanie MD</h5>
+          <h5 class="fg-maqua">geniemd</h5>
+          <div class="app-description">
+            <h6>This is a short descrption of the app</h6>
+          </div>
+        </li>
+        <li class="col-sm-4 app-rapper"><a href="http://healthvault.com" class="text-center"><img src="img/apps/healthvault.png" class="app-icon"></a>
+          <h5 class="fg-maqua">Healthvault</h5>
           <div class="app-description">
             <h6>This is a short descrption of the app</h6>
           </div>
@@ -68,9 +68,8 @@
       <div class="text-center">
         <ul class="pagination pagination-lg">
           <li class="disabled"><a href="#">&laquo;</a></li>
-          <li class="active"><a href="#">1<span class="sr-only">(current)</span></a></li>
-          <li><a href="userecords-2.html">2</a></li>
-          <li><a href="#">3</a></li>
+          <li class="pagination-link active"><a href="userecords-1.html" data-page='1'>1<span class="sr-only">(current)</span></a></li>
+          <li class="pagination-link"><a href="userecords-2.html" data-page='2'>2</a></li>
           <li><a href="userecords-2.html">&raquo;</a></li>
         </ul>
       </div>
