--- a/providers/oregon.html
+++ b/providers/oregon.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../css/bbhub-combined.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js">\x3C/script>')</script>
+    <script>window.jQuery || document.write('<script src="../js/jquery-1.10.2.min.js">\x3C/script>')</script>
     <script src="../js/bbhub-combined.min.js"></script>
   </head>
   <body>
@@ -61,7 +61,7 @@
         <div class="col-sm-7 col-sm-push-5 col-xs-12">
           <div class="ask-participate">
             <h5 class="fw-normal fg-dblue">Ask Oregon  to participate!</h5>
-            <h6 class="fg-mgrey">If some features are not available, ask them why and request it now.</h6><a href="#" class="btn btn-primary">Request</a>
+            <h6 class="fg-mgrey">If some features are not available, ask them why and request it now.</h6><a href="mailto:bluebutton@hhs.gov?subject=Features%20Request%20for%20Oregon%20&amp;body=What%20features%20do%20you%20want%20to%20see:" target="_blank" class="btn btn-primary">Request</a>
           </div>
         </div>
       </div>
@@ -69,12 +69,12 @@
     <div class="section footer">
       <div class="container">
         <ul class="list-inline inline">
-          <li class="hidden-xs force-inline"><img src="img/bb-logo-vector.png" class="little-logo"></li>
+          <li class="hidden-xs force-inline"><img src="../img/bb-logo-vector.png" class="little-logo"></li>
           <li><a href="#">About</a></li>
           <li>|</li>
-          <li><a href="supporters.html">Supporters</a></li>
+          <li><a href="../supporters.html">Supporters</a></li>
           <li>|</li>
-          <li><a href="privacy.html">Privacy</a></li>
+          <li><a href="../privacy.html">Privacy</a></li>
         </ul>
       </div>
     </div>
