--- a/findrecords.html
+++ b/findrecords.html
@@ -90,8 +90,6 @@
     <li><a href="providers/beth-israel-deaconess-medical-center.html" class="provider-link">Beth Israel Deaconess Medical Center</a></li>
     <li><a href="providers/bon-secours-health-system.html" class="provider-link">Bon Secours Health System</a></li>
     <li><a href="providers/carolinas-healthcare--chs-.html" class="provider-link">Carolinas Healthcare (CHS)</a></li>
-    <li><a href="providers/catholic-health-initiatives.html" class="provider-link">Catholic Health Initiatives</a></li>
-    <li><a href="providers/chico-heart-medical-clinic.html" class="provider-link">Chico Heart Medical Clinic</a></li>
     <li><a href="providers/children-s-hospital-boston.html" class="provider-link">Children's Hospital Boston</a></li>
     <li><a href="providers/children-s-hospital-colorado.html" class="provider-link">Children's Hospital Colorado</a></li>
     <li><a href="providers/cleveland-clinic.html" class="provider-link">Cleveland Clinic</a></li>
@@ -139,10 +137,11 @@
     <input type="search" placeholder="e.g. Walgreens" class="form-control input-lg provider-search"/><span class="input-group-addon"><i class="fa fa-search"></i></span>
   </div>
   <ul id="pharmacy-list" class="nav nav-pills nav-stacked provider-list list">
+    <li><a href="providers/CVS.html" class="provider-link">CVS Caremark</a></li>
     <li><a href="providers/hdl.html" class="provider-link">HDL</a></li>
     <li><a href="providers/labcorp.html" class="provider-link">LabCorp</a></li>
-    <li><a href="providers/nms-labs.html" class="provider-link">NMS Labs</a></li>
     <li><a href="providers/quest.html" class="provider-link">Quest</a></li>
+    <li><a href="providers/Rite Aid.html" class="provider-link">RITE AID</a></li>
     <li><a href="providers/unitedhealth_biolq.html" class="provider-link">UnitedHealth_BiolQ</a></li>
     <li><a href="providers/walgreens.html" class="provider-link">Walgreens</a></li>
   </ul>
