--- a/findrecords.html
+++ b/findrecords.html
@@ -85,7 +85,6 @@
     <input type="search" placeholder="e.g. Anderson" class="form-control input-lg provider-search"/><span class="input-group-addon"><i class="fa fa-search"></i></span>
   </div>
   <ul id="physician-list" class="nav nav-pills nav-stacked provider-list list">
-    <li><a href="providers/lucile-packard-children-s-hospital.html" class="provider-link"> Lucile Packard Children’s Hospital</a></li>
     <li><a href="providers/aspirus-grand-view.html" class="provider-link">Aspirus Grand View</a></li>
     <li><a href="providers/beth-israel-deaconess-medical-center.html" class="provider-link">Beth Israel Deaconess Medical Center</a></li>
     <li><a href="providers/bon-secours-health-system.html" class="provider-link">Bon Secours Health System</a></li>
@@ -101,6 +100,7 @@
     <li><a href="providers/john-muir-health.html" class="provider-link">John Muir Health</a></li>
     <li><a href="providers/kaiser-permanente.html" class="provider-link">Kaiser Permanente</a></li>
     <li><a href="providers/lance-michael-kurata--md.html" class="provider-link">Lance Michael Kurata, MD</a></li>
+    <li><a href="providers/lucile-packard-children-s-hospital.html" class="provider-link">Lucile Packard Children’s Hospital</a></li>
     <li><a href="providers/madigan-healthcare-system.html" class="provider-link">Madigan Healthcare System</a></li>
     <li><a href="providers/mayo-clinic.html" class="provider-link">Mayo Clinic</a></li>
     <li><a href="providers/medical-specialists-of-the-palm-beaches--inc---mspb-.html" class="provider-link">Medical Specialists of the Palm Beaches, Inc. (MSPB)</a></li>
@@ -137,11 +137,11 @@
     <input type="search" placeholder="e.g. Walgreens" class="form-control input-lg provider-search"/><span class="input-group-addon"><i class="fa fa-search"></i></span>
   </div>
   <ul id="pharmacy-list" class="nav nav-pills nav-stacked provider-list list">
-    <li><a href="providers/CVS.html" class="provider-link">CVS Caremark</a></li>
+    <li><a href="providers/cvs-caremark.html" class="provider-link">CVS Caremark</a></li>
     <li><a href="providers/hdl.html" class="provider-link">HDL</a></li>
     <li><a href="providers/labcorp.html" class="provider-link">LabCorp</a></li>
     <li><a href="providers/quest.html" class="provider-link">Quest</a></li>
-    <li><a href="providers/Rite Aid.html" class="provider-link">RITE AID</a></li>
+    <li><a href="providers/rite-aid.html" class="provider-link">RITE AID</a></li>
     <li><a href="providers/unitedhealth_biolq.html" class="provider-link">UnitedHealth_BiolQ</a></li>
     <li><a href="providers/walgreens.html" class="provider-link">Walgreens</a></li>
   </ul>
