--- a/supporters.html
+++ b/supporters.html
@@ -14,7 +14,7 @@
   <body>
     <nav class="main-nav navbar navbar-default">
       <div class="container">
-        <div class="navbar-header"><a href="index.html" class="navbar-brand logo bb-logotype"><img src="img/bb-logo-vector.png" class="little-logo">Blue Button</a></div>
+        <div class="navbar-header"><a href="index.html" class="navbar-brand logo bb-logotype"><img src="img/bb-logo-depth-small.jpg" class="little-logo">Blue Button</a></div>
         <ul class="top-nav nav navbar-nav pull-right hidden-xs">
           <li><a href="findrecords.html">Get my records</a></li>
           <li><a href="userecords-1.html">Use my records</a></li>
@@ -23,50 +23,40 @@
     </nav>
     <div class="container">
       <h1 class="page-title">Get Involved To Be Featured On The Hub</h1>
-      <h2>Critera for:</h2>
-      <div class="row partners-lists-container">
-        <div class="col-sm-4">
-          <h3 class="fg-mblue">data holders</h3>
-          <ul class="partners-list">
-            <li>
-              <h6>Enable patients/members to view and download their records online</h6>
-            </li>
-          </ul>
-        </div>
-        <div class="col-sm-4">
-          <h3 class="fg-mblue">data receivers</h3>
-          <ul class="partners-list">
-            <li>
-              <h6>Receive or transmit CCDA</h6>
-            </li>
-            <li>
-              <h6>Use Direct protocols for data transmission</h6>
-            </li>
-            <li>
-              <h6>App must be transparent with user about data security/privacy</h6>
-            </li>
-          </ul>
-        </div>
-        <div class="col-sm-4">
-          <h3 class="fg-mblue">supporting organizations</h3>
-          <ul class="partners-list">
-            <li>
-              <h6>Take the<a href="http://www.HealthIT.gov/pledge">Blue Button Pledge</a></h6>
-            </li>
-            <li>
-              <h6>Use the logo and phrase "Blue Button" to describe a way consumers can get electronic access to their health information through health IT. Please ensure that you follow the<a src="http://www.healthit.gov/patients-families/blue-button/blue-button-image" class="fg-daqua fw-strong"> logo usage guidelines.</a></h6>
-            </li>
-            <li>
-              <h6>Help spread the word about Blue Button. Use our public service announcements and other assets for your outreach efforts. Blog, tweet #BlueButton, and use other social media to talk to consumers about the importance of Blue Button and consumer engagement.</h6>
-            </li>
-          </ul>
-        </div>
+      <div class="partners-lists-container">
+        <h2 class="fg-mblue">Critera for data holders</h2>
+        <ul class="partners-list">
+          <li>
+            <h6>Enable patients/members to view and download their records online</h6>
+          </li>
+        </ul>
+        <h2 class="fg-mblue">Critera for data receivers</h2>
+        <ul class="partners-list">
+          <li>
+            <h6>Receive or transmit CCDA</h6>
+          </li>
+          <li>
+            <h6>App must be transparent with user about data security/privacy</h6>
+          </li>
+        </ul>
+        <h2 class="fg-mblue">Critera for supporting organizations</h2>
+        <ul class="partners-list">
+          <li>
+            <h6>Take the <a class="fg-daqua fw-strong" href='http://www.HealthIT.gov/pledge'>Blue Button Pledge</a></h6>
+          </li>
+          <li>
+            <h6>Use the logo and phrase "Blue Button" to describe a way consumers can get electronic access to their health information through health IT. Please ensure that you follow the <a class="fg-daqua fw-strong" href="http://www.healthit.gov/patients-families/blue-button/blue-button-image">logo usage guidelines</a>.</h6>
+          </li>
+          <li>
+            <h6>Help spread the word about Blue Button. Use our public service announcements and other assets for your outreach efforts. Blog, tweet #BlueButton, and use other social media to talk to consumers about the importance of Blue Button and consumer engagement.</h6>
+          </li>
+        </ul>
       </div>
     </div>
     <div class="section footer">
       <div class="container">
         <ul class="list-inline inline">
-          <li class="hidden-xs force-inline"><img src="img/bb-logo-vector.png" class="little-logo"></li>
+          <li class="hidden-xs force-inline"><img src="img/bb-logo-depth-small-greybg.jpg" class="little-logo"></li>
           <li><a href="#">About</a></li>
           <li>|</li>
           <li class="hidden-xs force-inline"><a href="supporters.html">Supporters</a></li>
