updates as of noon, feb 12

--- a/findrecords.html
+++ b/findrecords.html
@@ -16,8 +16,8 @@
       <div class="container">
         <div class="navbar-header"><a href="index.html" class="navbar-brand logo bb-logotype"><img src="img/bb-logo-depth-small.jpg" class="little-logo">Blue Button</a></div>
         <ul class="top-nav nav navbar-nav pull-right hidden-xs">
-          <li><a href="findrecords.html">Organizations participating</a></li>
-          <li><a href="userecords-1.html">3<sup>rd</sup> party apps</a></li>
+          <li><a href="findrecords.html">Health records</a></li>
+          <li><a href="userecords-1.html">Apps</a></li>
         </ul>
       </div>
     </nav>
@@ -33,14 +33,14 @@
         <div class="col-sm-9">
           <ul class="row data-sources list-unstyled text-center">
             <li class="col-sm-6"><a href="#insurance" data-toggle="tab" class="box-link-rapper">
-                <h3 class="fg-white">Health Insurance</h3><i class="insurance-icon fa fa-umbrella"></i>
+                <h3 class="fg-white">Health Insurance</h3><i class="insurance-icon fa fa-umbrella isize-48"></i>
                 <h6 class="start-here fg-white">start here</h6></a></li>
             <li class="col-sm-6"><a href="#physician" data-toggle="tab" class="box-link-rapper">
-                <h3 class="fg-white">Physician or Hospital</h3><i class="fa fa-user-md"></i></a></li>
+                <h3 class="fg-white">Physician or Hospital</h3><i class="fa fa-user-md isize-48"></i></a></li>
             <li class="col-sm-6"><a href="#pharmacy" data-toggle="tab" class="box-link-rapper">
-                <h3 class="fg-white">Pharmacy or Lab</h3><i class="fa fa-medkit"></i></a></li>
+                <h3 class="fg-white">Pharmacy or Lab</h3><i class="fa fa-medkit isize-48"></i></a></li>
             <li class="col-sm-6"><a href="#immunization" data-toggle="tab" class="box-link-rapper">
-                <h3 class="fg-white">Immunization Registry</h3><i class="fa fa-file-text-o"></i></a></li>
+                <h3 class="fg-white">Immunization Registry</h3><i class="fa fa-file-text-o isize-48"></i></a></li>
           </ul>
         </div>
       </div>
@@ -395,7 +395,7 @@
     <li><a href="providers/alaska.html" class="provider-link">Alaska</a></li>
     <li><a href="providers/arizona.html" class="provider-link">Arizona</a></li>
     <li><a href="providers/indiana.html" class="provider-link">Indiana</a></li>
-    <li><a href="providers/louisianna.html" class="provider-link">Louisianna </a></li>
+    <li><a href="providers/louisiana.html" class="provider-link">Louisiana</a></li>
     <li><a href="providers/mississippi.html" class="provider-link">Mississippi</a></li>
     <li><a href="providers/new-york.html" class="provider-link">New York </a></li>
     <li><a href="providers/oregon.html" class="provider-link">Oregon </a></li>
@@ -414,16 +414,16 @@
     </div>
     <div class="section footer">
       <div class="container">
-        <ul class="list-inline inline">
-          <li class="hidden-xs force-inline"><img src="img/bb-logo-depth-small-greybg.jpg" class="little-logo"></li>
-          <li><a href="#">About</a></li>
-          <li>|</li>
-          <li class="hidden-xs force-inline"><a href="supporters.html">Supporters</a></li>
+        <ul class="footer-links list-inline inline">
+          <li><a href="supporters.html">Supporters</a></li>
           <li class="hidden-xs force-inline">|</li>
-          <li><a href="privacy.html">Privacy</a></li>
-          <li>|</li>
           <li><a href="developers.html">Developers</a></li>
+          <li class="hidden-xs force-inline">|</li>
+          <li><a href="http://www.hhs.gov/Privacy.html">Privacy</a></li>
+          <li class="hidden-xs force-inline">|</li>
+          <li><a href="http://www.hhs.gov/Disclaimer.html">Disclaimer</a></li>
         </ul>
+        <p class="fs-xxsmall">This project was funded by a contract from the <a class='td-underline' href="http://www.hhs.gov/healthit/">Office of the National Coordinator for Health Information Technology (ONC)</a></p>
       </div>
     </div>
     <script>
