--- a/providers/louisiana.html
+++ b/providers/louisiana.html
@@ -16,7 +16,7 @@
       <h6 class="fs-xsmall fg-dblue"><a href="../findrecords.html">&larr; back to provider list</a></h6>
     </div>
     <div class="container">
-      <h2 class="page-title">Kaiser Permanente</h2>
+      <h2 class="page-title">Louisiana</h2>
       <div class="row">
         <div class="col-sm-7 col-sm-push-5 col-xs-12">
           <h3 class="sub-title">Features</h3>
@@ -27,7 +27,7 @@
             <li class="clearfix"><span class="fake-checkbox pull-left checked"><em>you can</em></span>
               <h6 class="feature-title">View your records online</h6>
             </li>
-            <li class="clearfix"><span class="fake-checkbox pull-left"><em>you can't</em></span>
+            <li class="clearfix"><span class="fake-checkbox pull-left checked"><em>you can</em></span>
               <h6 class="feature-title">Download your records</h6>
             </li>
             <li class="clearfix"><span class="fake-checkbox pull-left"><em>you can't</em></span>
@@ -36,32 +36,25 @@
             <li class="clearfix"><span class="fake-checkbox pull-left"><em>you can't</em></span>
               <h6 class="feature-title">Automatically receive updates to your health records</h6>
             </li>
-            <li class="clearfix"><span class="fake-checkbox pull-left checked"><em>there are</em></span>
+            <li class="clearfix"><span class="fake-checkbox pull-left"><em>there are no</em></span>
               <h6 class="feature-title">Additional features</h6>
-              <ul class="additional-features-list">
-                <li>Dispute a claim</li>
-                <li>Refill your prescription</li>
-                <li>Get test reminders</li>
-                <li>Schedule or manage appointments</li>
-                <li>Shop for a plan</li>
-              </ul>
             </li>
           </ul>
           <hr class="visible-xs">
         </div>
-        <div class="col-sm-5 col-sm-pull-7 col-xs-12 pt-5"><a href="https://healthy.kaiserpermanente.org/health/care/signon" target="_blank" class="get-records-wrapper-link">
-            <p class="fg-daqua">login to Kaiser Permanente</p><img src="../img/providers/kaiser-permanente.png" class="img-thumbnail img-responsive profile-img">
+        <div class="col-sm-5 col-sm-pull-7 col-xs-12 pt-5"><a href="https://la.myir.net" target="_blank" class="get-records-wrapper-link">
+            <p class="fg-daqua">login to Louisiana</p><img src="../img/providers/louisiana.png" class="img-thumbnail img-responsive profile-img">
             <div class="get-records-prep">
               <h6 class="go-get-em-header fg-maqua text-center">get your health records</h6><img src="../img/arrow-up.png" class="arrow-up hidden-xs">
             </div></a>
-          <h6 class="provider-about-header fs-xsmall fw-strong fg-dgrey">About Kaiser Permanente</h6>
-          <p class="provider-description">We’ve been there for you in the past, providing health care for more than 60 years. We’re here for you today and in days to come, with our ongoing commitment to quality. And we share this tradition and commitment by reaching out to your community, and promoting health and wellness for all.</p>
+          <h6 class="provider-about-header fs-xsmall fw-strong fg-dgrey">About Louisiana</h6>
+          <p class="provider-description"></p>
         </div>
       </div>
       <div class="row">
         <div class="col-sm-7 col-sm-push-5 col-xs-12">
           <div class="ask-participate">
-            <h5 class="fw-normal fg-dblue">Ask Kaiser Permanente to participate!</h5>
+            <h5 class="fw-normal fg-dblue">Ask Louisiana to participate!</h5>
             <h6 class="fg-mgrey">If some features are not available, ask them why with <a class='fg-maqua fw-strong' href='../blue-button-request.pdf', target='_blank'>this form letter (PDF)</a>.</h6>
           </div>
         </div>
