updates morning Feb 20, including CNAME update

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <h4 class="modal-title">Thank you for visiting the Connector.</h4>
           </div>
           <div class="modal-body text-center">
-            <p class="fw-bold"> We're live, but still in "Beta".</p>
-            <p>We will have more organizations on the Connector shortly.</p>
+            <p>This early release is an invitation to help us improve and populate the site before it is more widely marketed.</p>
+            <p>Please share your input at BlueButton@healthit.gov</p>
           </div>
           <div class="modal-footer">
             <button type="button" data-dismiss="modal" class="btn btn-primary">Got it</button>
@@ -164,7 +164,7 @@
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
       
-      ga('create', 'UA-44323000-1', 'bluebuttonconnector.org');
+      ga('create', 'UA-44323000-1', 'bluebuttonconnector.healthit.gov');
       ga('send', 'pageview');
     </script>
   </body>
