--- a/developers.html
+++ b/developers.html
@@ -24,10 +24,9 @@
     <div class="container">
       <h1 class="page-title">Resources for developers</h1>
       <h3 class="fg-mblue">API</h3>
-      <p class="readable-width fg-dgrey">The Blue Button Connector provides a free, public, read-only API to access the directory of providers and receivers (apps).</p><a href="http://api.bluebuttonconnector.org" class="btn btn-primary">API documentation & examples</a>
+      <p class="readable-width fg-dgrey">The Blue Button Connector provides a free, public, read-only API to access the directory of providers and receivers (apps).</p><a href="http://api.bluebuttonconnector.healthit.gov" class="btn btn-primary">API documentation & examples</a>
       <h3 class="fg-mblue">Adding data to the Connector</h3>
-      <p class="readable-width fg-dgrey">Although the public API is currently read-only, you can use the web form to add a new <a class='fw-strong' href='/update-provider.html'>provider</a> or <a class='fw-strong' href='/update-receiver.html'>receiver</a>. You'll find a link at the bottom of each provider profile page that you can use to suggest corrections to existing providers.</p>
-      <p class="readable-width fg-dgrey">If your addition or correction is approved, it will appear on the website and in the API.</p>
+      <p class="readable-width fg-dgrey">To add new providers or update data on an existing provider, <a class='fw-strong' href='mailto:bluebutton@hhs.gov?subject=Adding%20provider%20data%20to%20the%20Connector', target='_blank'>send us an email</a>.</p>
       <h3 class="fg-mblue">Connector website files</h3>
       <p class="readable-width fg-dgrey">This Connector website has been built in the open. You can find the <a class='fw-strong' href='https://github.com/blue-button/connector'>source files on Guthub</a>.</p>
       <h3 class="fg-mblue">Blue Button+</h3>
@@ -58,7 +57,7 @@
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
       
-      ga('create', 'UA-44323000-1', 'bluebuttonconnector.org');
+      ga('create', 'UA-44323000-1', 'bluebuttonconnector.healthit.gov');
       ga('send', 'pageview');
     </script>
   </body>
